<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/size10"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_setting_permission"
                android:layout_marginHorizontal="@dimen/size100"
                />

            <TextView
                style="@style/TextView_Headline2"
                android:text="@string/txt_premission_request"
                android:layout_marginHorizontal="@dimen/size20"/>

            <TextView
                style="@style/TextView_Body1"
                android:text="@string/txt_premission_request_message"
                android:layout_marginHorizontal="@dimen/size20"
                android:textColor="@color/gray"
                />

            <LinearLayout
                android:id="@+id/llWriteSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/size30"
                android:layout_marginTop="@dimen/size10"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_write_setting_permission"
                    style="@style/TextView_Headline2"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llReadMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/size30"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_read_media_permisison"
                    style="@style/TextView_Headline2"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/size30"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_receiver_notification"
                    style="@style/TextView_Headline2"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_next"
                android:background="@drawable/bg_green_round20"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/size30"
                android:paddingTop="@dimen/size5"
                android:paddingBottom="@dimen/size6"
                android:textSize="@dimen/size16"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size20"
                />

        </LinearLayout>
    </ScrollView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/fl_adplaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <include
            android:id="@+id/native_ad_view"
            layout="@layout/ad_unified"/>

    </com.facebook.shimmer.ShimmerFrameLayout>
</LinearLayout>