<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bg"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_adplaceholder"
        android:layout_marginLeft="@dimen/size10"
        android:layout_marginTop="@dimen/size10"
        android:textSize="@dimen/size15"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/size10"
        >

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancel"
            android:textSize="@dimen/size15"
            android:paddingHorizontal="@dimen/size20"
            android:paddingVertical="@dimen/size5"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_exit"
            android:textSize="@dimen/size15"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingHorizontal="@dimen/size20"
            android:paddingVertical="@dimen/size5"
            />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/fl_adplaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/size10"
        >
        <include
            android:id="@+id/native_ad_view"
            layout="@layout/ad_unified"/>

    </com.facebook.shimmer.ShimmerFrameLayout>
</LinearLayout>